Fixed class classification